# EHMI-QT-Prak

./: CMakeLists.txt  README.md  lbuild.sh  start.sh
src/: gpioListener.cpp  gpioListener.h  main.cpp  mainwindow.cpp  mainwindow.h
ui/: gui.ui
